--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "axios": "^0.26.1",
     "cheerio": "^1.0.0-rc.10",
     "core-js": "^3.6.5",
+    "express": "^4.17.3",
+    "node-xlsx": "^0.21.0",
     "vue": "^2.6.11",
     "vue-router": "^3.5.3"
   },
